Ntop Styling: Fixed low contrast font colors (CMK-6622)

--- a/web/htdocs/themes/facelift/scss/_node_visualization.scss
+++ b/web/htdocs/themes/facelift/scss/_node_visualization.scss
@@ -407,7 +407,7 @@ div.node_vis {
   }
 
   image.growth_possible {
-    filter: $node-vis-growth-img-filter;
+    filter: $dark-image-invert;
   }
 
   div#togglebuttons {
