--- a/web/htdocs/themes/facelift/scss/_variables.scss
+++ b/web/htdocs/themes/facelift/scss/_variables.scss
@@ -417,7 +417,6 @@ $node-vis-menu-bg-color: null;
 $node-vis-history-bg-color: null;
 $node-vis-history-border-color: null;
 $node-vis-history-filter: null;
-$node-vis-growth-img-filter: null;
 $node-vis-growth-root-color: rgb(25, 90, 230); // blue
 $topology-filter-bg-color: null;
 $topology-filter-border-color: null;
@@ -515,3 +514,4 @@ $dashlet-anchor-size: 26px;
 $dashlet-anchor-on-size: 40px;
 $dashlet-editor-free: rgb(78, 93, 105);
 $dashlet-editor-icon-size: 22px;
+$dark-image-invert: null;
